[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/Inspectors/Inspector.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Inspectors/ItemInspector/ItemInspector.gd" type="Script" id=2]
[ext_resource path="res://_Resources/font/BMYEONSUNG_ttf.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://_Resources/gui_images/Division line.png" type="Texture" id=4]
[ext_resource path="res://_Resources/gui_images/UI board Small  parchment.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 85
font_data = ExtResource( 3 )

[node name="ItemInspector" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Parts" type="Label" parent="Panel/VBoxContainer" index="3"]
margin_top = 147.0
margin_right = 840.0
margin_bottom = 246.0
custom_fonts/font = SubResource( 1 )
text = "Steel Sword Blade - Fir Sword Handle - Ruby Pommel"
align = 1
valign = 1
autowrap = true

[node name="Line2" type="HBoxContainer" parent="Panel/VBoxContainer" index="4"]
margin_top = 250.0
margin_right = 840.0
margin_bottom = 265.0

[node name="LeftMargin" type="Label" parent="Panel/VBoxContainer/Line2" index="0"]
margin_right = 100.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/Line2" index="1"]
margin_left = 104.0
margin_right = 736.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
texture = ExtResource( 4 )
expand = true

[node name="RightMargin" type="Label" parent="Panel/VBoxContainer/Line2" index="2"]
margin_left = 740.0
margin_right = 840.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="TierStars" parent="Panel/VBoxContainer" index="5"]
margin_top = 269.0
margin_bottom = 283.0

[node name="Line1" parent="Panel/VBoxContainer" index="6"]
margin_top = 287.0
margin_bottom = 302.0

[node name="Image" parent="Panel/VBoxContainer" index="7"]
margin_top = 306.0
margin_bottom = 706.0

[node name="Line3" parent="Panel/VBoxContainer" index="8"]
margin_top = 710.0
margin_bottom = 725.0

[node name="Stats" parent="Panel/VBoxContainer" index="9"]
margin_top = 729.0
margin_bottom = 1084.0

[node name="StatsContainer" parent="Panel/VBoxContainer/Stats" index="0"]
margin_bottom = 355.0

[node name="Line5" type="HBoxContainer" parent="Panel/VBoxContainer" index="10"]
margin_top = 1088.0
margin_right = 840.0
margin_bottom = 1103.0

[node name="LeftMargin" type="Label" parent="Panel/VBoxContainer/Line5" index="0"]
margin_right = 100.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/Line5" index="1"]
margin_left = 104.0
margin_right = 736.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
texture = ExtResource( 4 )
expand = true

[node name="RightMargin" type="Label" parent="Panel/VBoxContainer/Line5" index="2"]
margin_left = 740.0
margin_right = 840.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="Buttons" type="HBoxContainer" parent="Panel/VBoxContainer" index="11"]
margin_top = 1107.0
margin_right = 840.0
margin_bottom = 1327.0
rect_min_size = Vector2( 0, 220 )

[node name="Equip" type="TextureButton" parent="Panel/VBoxContainer/Buttons" index="0"]
margin_right = 840.0
margin_bottom = 220.0
rect_min_size = Vector2( 0, 175 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="Panel/VBoxContainer/Buttons/Equip" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Equip"
align = 1
valign = 1

[connection signal="pressed" from="Panel/VBoxContainer/Buttons/Equip" to="." method="_on_Equip_pressed"]
